Fix a scrollbar.

--- a/css/index.scss
+++ b/css/index.scss
@@ -335,7 +335,6 @@ body {
 
         &__filter-block {
             max-height: 250px;
-            border: 1px solid #00000000;
         }
 
         &_area {
@@ -359,7 +358,7 @@ body {
 
         &_button {
             width: 5px;
-            height: 150px;
+            // height: 150px;
             border-radius: 2.5px;
             background-color: $red-color;
             cursor: pointer;
